# join-the-dots-dev

./: .cz.yaml  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  compose.yaml  config.template.json  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js  pyproject.toml  vite.config.js
.github/workflows/: accessibility.yml  bump.yml  pull-requests.yml  sync.yml
deploy/lb/conf/: jtd.conf
deploy/server/: Dockerfile  entrypoint
deploy/web/: Dockerfile  entrypoint
docs/diagrams/: CI CD Architecture JtD 29-07-25.txt  CI CD Architecture JtD.plantuml  ComponentHierarchy 12-06-25.txt  ComponentHierarchy.plantuml  Full-Stack Architecture JtD 12-06-25.txt  Full-Stack Architecture JtD 13-06-25.txt  Full-Stack Architecture JtD.plantuml  jtd-k8s-architecture.plantuml
mysql/: rescore changes.sql  taxon changes.sql  user changes.sql
public/help_page/content/: bulk_update.md  correct_mistakes.md  create_unit.md  edit_units.md  navigation.md  no_change.md  ongoing_development.md  rescore.md  unit_actions.md  user_permissions.md  view_units.md
server/: Dockerfile  __init__.py  app.py  config.py  database.py  powerbi_utils.py  pyproject.toml  register_routes.py  requirements.txt  run.py  utils.py
server/routes/: __init__.py  auth.py  auth_test.py  data.py  export.py  powerbi.py  report.py  stats.py  user.py
server/routes/queries/: data_queries.py
server/services/: auth_service.py
src/: App.vue  HeaderView.vue  authService.js  fonts.scss  main.js
src/assets/: base.css  global.less  main.css
src/components/: AccordionGeneric.vue  ActionsBtnGroup.vue  AssessmentCriterion.vue  BulkEditScoreModal.vue  CollapsibleTabs.vue  CriterionDefModal.vue  EditCommentsModal.vue  ExportFilters.vue  HelpIssuesView.vue  HomeStats.vue  LoadingChart.vue  LoadingOverlay.vue  MetricsPercentageInput.vue  NavLinks.vue  OverlayMessage.vue  PercentageInput.vue  ProgressBar.vue  RanksMessages.vue  RanksWarnings.vue  RescoreAccordionComp.vue  RescoreComp.vue  RescoreCompV2.vue  ReviewUnitChanges.vue  RichEditor.vue  RoundProgressBar.vue  SelectComp.vue  SidebarFilter.vue  SmallMessages.vue  StepperComp.vue  TableCheckbox.vue  TestTable.vue  TopTabs.vue  UnitActionsModal.vue  UnitScores.vue  UserSections1.vue  UserSections2.vue
src/components/admin/: AdminIssues.vue  AdminPermissions.vue  GuidanceView.vue  ManageChangeLog.vue  ManageEnhancements.vue  ManageRescores.vue
src/components/help/: ChangeLog.vue  EnhancementsTable.vue  HelpIssueView.vue
src/components/help-content/: bulk_update.vue  correct_mistakes.vue  create_unit.vue  edit_units.vue  navigation_help.vue  no_change.vue  ongoing_development.vue  rescore_help.vue  unit_actions.vue  user_permissions.vue  view_units.vue
src/components/modals/: AddNewUserModal.vue  BulkEditResponsibility.vue  BulkEditScoreModal.vue  CombineModal.vue  CriterionDefModal.vue  DeleteModal.vue  DiscardRescoreModal.vue  EditCommentsModal.vue  EditEnhancementModal.vue  FeedackModal.vue  ManageUserModal.vue  ManageUserModel.vue  NoRescoreModal.vue  SplitModal.vue  UpgradeViewerModal.vue
src/components/rescore/: EditRescoreView.vue  ManageRescoreView.vue  ReviewRescoreView.vue
src/components/unit sections/: CommentsTab.vue  CustomField.vue  DetailsTab.vue  PropertiesTab.vue  ScoresTab.vue  SectionTab.vue  StorageTab.vue
src/router/: index.js  router.js
src/services/: api.js  authService.js  dataService.js  exportService.js  statsService.js  userService.js
src/stores/: messages.js
src/utils/: field_tooltips.json  help_page.json  ranks_json_temp.json  tabFieldsConfig.json  unit_sections.json  utils.js
src/views/: AboutView.vue  AccountView.vue  AdminView.vue  AssignmentManagement.vue  FooterView.vue  HeaderView.vue  HelpView.vue  HomeView.vue  LoginView.vue  ManageRescoreView.vue  ReportsView.vue  RescoreView.vue  TableCheckbox.vue  TestView.vue  UnitAssignmentManagement.vue  UnitsView.vue  UserManagement.vue  ViewUnit.vue  ViewUnits.vue
tests/: a11y.spec.js  auth.setup.js  global-setup.js
