[project]
name = "join-the-dots-dev"
version = "0.1.0"
description = "Join the Dots web application"
readme = "README.md"
requires-python = ">=3.6"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Natural History Museum", email = "data@nhm.ac.uk" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only"
]
dependencies = [
    "dotenv>=0.9.9",
    "flask>=2.0.3",
    "flask-cors>=5.0.0",
    "flask-dance>=7.1.0",
    "msal>=1.27.0",
    "mysql-connector-python>=8.0.33",
    "pyjwt>=2.4.0",
    "requests>=2.27.1",
    "flask_jwt_extended>=4.7.1",
    "gunicorn>=23.0.0",
]

[project.urls]
repository = "https://github.com/NaturalHistoryMuseum/join-the-dots-dev"
changelog = "https://github.com/NaturalHistoryMuseum/join-the-dots-dev/blob/main/CHANGELOG.md"


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[tool]
[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
exclude = ["tests", "docs"]

[tool.commitizen]
name = "cz_nhm"
version = "0.1.0"
tag_format = "v$version"
update_changelog_on_bump = true
changelog_incremental = true
major_version_zero = true
version_provider = "npm"
version_files = [
    "pyproject.toml:version"
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "D"
]
ignore = [
    "D100",
    "D104",
    "D200",
    "D202",
    "D203",
    "D205",
    "D206",
    "D212",
    "D300",
    "D401",
    "E111",
    "E114",
    "E117"
]

[tool.docformatter]
wrap-summaries = 88
wrap-descriptions = 88
pre-summary-newline = true
make-summary-multi-line = true
