[project]
name = "join-the-dots-dev"
version = "0.1.0"
description = "Join the Dots web application"
readme = "README.md"
requires-python = ">=3.6"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Natural History Museum", email = "data@nhm.ac.uk" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only"
]
dependencies = [
    "dotenv>=0.9.9",
    "flask>=2.0.3",
    "flask-cors>=5.0.0",
    "flask-dance>=7.1.0",
    "msal>=1.27.0",
    "mysql-connector-python>=8.0.33",
    "pyjwt>=2.4.0",
    "requests>=2.27.1",
    "flask_jwt_extended>=4.7.1",
    "gunicorn>=23.0.0",
]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["tests", "docs"]
